ConvolverNode setBuffer() should not ASSERT on null buffer https://bugs.webkit.org/show_bug.cgi?id=85653

Patch by Raymond Toy <rtoy@google.com> on 2012-05-07
Reviewed by Chris Rogers.

Source/WebCore:

Test: webaudio/convolver-setBuffer-null.html

* Modules/webaudio/ConvolverNode.cpp:
(WebCore::ConvolverNode::setBuffer):  Don't ASSERT on null buffer.

LayoutTests:

* webaudio/convolver-setBuffer-null-expected.txt: Added.
* webaudio/convolver-setBuffer-null.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@116358 bbb929c8-8fbe-4397-9dbb-9b2b20218538