third_party/WebKit/Source/WebCore/Modules/webaudio/ConvolverNode.cpp
@@ -114,7 +114,6 @@ void ConvolverNode::setBuffer(AudioBuffer* buffer)
 {
     ASSERT(isMainThread());
     
-    ASSERT(buffer);
     if (!buffer)
         return;
 
